# act-hs

./: .gitignore  README.md  Setup.hs  act-hs.cabal  cabal.project
act-api/: act-api.cabal
act-api/src/ACT/: API.hs  ContentTypes.hs  Crypto.hs  Types.hs  WireFormat.hs
act-client/: act-client.cabal
act-client/app/: Main.hs
act-client/src/ACT/Client/: Config.hs  DB.hs  HTTP.hs
act-docs/: act-docs.cabal
act-docs/app/: GenDocs.hs
act-docs/src/ACT/: Docs.hs
act-hs/: CHANGELOG.md  act-hs.cabal
act-hs/bench/: Bench.hs
act-hs/ffi/: Cargo.toml
act-hs/test/: Spec.hs
act-server/: API.md  act-server.cabal
act-server/app/: Main.hs
act-server/docs/: GenDocs.hs
act-server/server/ACT/Server/: API.hs  Config.hs  ContentTypes.hs  Crypto.hs  DB.hs  Docs.hs  Handlers.hs  Types.hs  WireFormat.hs
act-server/test/: Spec.hs
ffi/: Cargo.toml
ffi/src/: lib.rs
src/Crypto/: AnonymousCreditTokens.hs
src/Crypto/AnonymousCreditTokens/: FFI.hs  Internal.hs  Types.hs
