cabal-version:   3.0
name:            act-client
version:         0.1.0.0
license:         NONE
build-type:      Simple

library act-client-lib
  exposed-modules:
    ACT.Client.Config
    ACT.Client.DB
    ACT.Client.HTTP
  hs-source-dirs:   src
  build-depends:
    base                  >= 4.17 && < 5,
    act-hs,
    act-api,
    servant               >= 0.20,
    servant-client        >= 0.20,
    http-client           >= 0.7,
    http-client-tls       >= 0.3,
    sqlite-simple         >= 0.4,
    cryptohash-sha256     >= 0.11,
    optparse-applicative  >= 0.17,
    bytestring            >= 0.11,
    text                  >= 2.0,
    aeson                 >= 2.0,
    base16-bytestring     >= 1.0
  default-language: Haskell2010
  ghc-options: -Wall
  cpp-options: -DACT_L16

executable act-client
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    base                  >= 4.17 && < 5,
    act-hs,
    act-api,
    act-client:act-client-lib,
    servant-client        >= 0.20,
    http-client           >= 0.7,
    http-client-tls       >= 0.3,
    sqlite-simple         >= 0.4,
    cryptohash-sha256     >= 0.11,
    bytestring            >= 0.11,
    text                  >= 2.0,
    base16-bytestring     >= 1.0
  default-language: Haskell2010
  ghc-options: -Wall -threaded
  cpp-options: -DACT_L16
