cabal-version:   3.0
name:            act-server
version:         0.1.0.0
license:         NONE
build-type:      Simple

library act-server-lib
  exposed-modules:
    ACT.Server.API
    ACT.Server.ContentTypes
    ACT.Server.WireFormat
    ACT.Server.Handlers
    ACT.Server.DB
    ACT.Server.Crypto
    ACT.Server.Config
    ACT.Server.Types
  hs-source-dirs:   server
  build-depends:
    base                  >= 4.17 && < 5,
    act-hs,
    servant               >= 0.20,
    servant-server        >= 0.20,
    warp                  >= 3.3,
    sqlite-simple         >= 0.4,
    cryptohash-sha256     >= 0.11,
    optparse-applicative  >= 0.17,
    http-media            >= 0.8,
    bytestring            >= 0.11,
    text                  >= 2.0,
    aeson                 >= 2.0,
    base16-bytestring     >= 1.0,
    http-types            >= 0.12,
    wai                   >= 3.2
  default-language: Haskell2010
  ghc-options:      -Wall
  cpp-options:      -DACT_L16

executable act-server
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base                  >= 4.17 && < 5,
    act-hs,
    act-server:act-server-lib,
    servant-server        >= 0.20,
    warp                  >= 3.3,
    sqlite-simple         >= 0.4
  default-language: Haskell2010
  ghc-options:      -Wall -threaded

test-suite act-server-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
    base                  >= 4.17 && < 5,
    act-hs,
    act-server:act-server-lib,
    servant               >= 0.20,
    servant-server        >= 0.20,
    servant-client        >= 0.20,
    http-client           >= 0.7,
    http-types            >= 0.12,
    warp                  >= 3.3,
    wai                   >= 3.2,
    bytestring            >= 0.11,
    cryptohash-sha256     >= 0.11,
    text                  >= 2.0,
    aeson                 >= 2.0,
    base16-bytestring     >= 1.0,
    sqlite-simple         >= 0.4
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  cpp-options:      -DACT_L16
